force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture the consolidation of Bills and Charges</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>Invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>