force-app/main/default/objects/Invoice__c/fields/Adjustment_Status__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Status__c</fullName>
    <label>Adjustment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>