force-app/main/default/objects/Invoice__c/fields/Already_Updated__c.field-meta.xml
<CustomField>
    <fullName>Already_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Updated</label>
    <type>Checkbox</type>
</CustomField>