force-app/main/default/objects/Invoice__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <formula>LS_Contract__r.cllease__Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account</label>
    <type>Text</type>
</CustomField>