force-app/main/default/objects/Invoice__c/fields/Conga_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_URL__c</fullName>
    <label>Conga URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>