force-app/main/default/objects/Invoice__c/fields/File_Generated__c.field-meta.xml
<CustomField>
    <fullName>File_Generated__c</fullName>
    <label>File Generated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>