force-app/main/default/objects/Invoice__c/fields/File_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>File_Generated_On__c</fullName>
    <label>File Generated On</label>
    <type>Date</type>
</CustomField>