force-app/main/default/objects/Invoice__c/fields/Invoice_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_End_Date__c</fullName>
    <label>Invoice Period End Date</label>
    <type>Date</type>
</CustomField>