force-app/main/default/objects/Invoice__c/fields/Number_of_Charges__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Charges__c</fullName>
    <label>Number of Charges</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>