force-app/main/default/objects/Invoice__c/fields/Paid_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_Amount__c</fullName>
    <label>Paid Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>