force-app/main/default/objects/Invoice__c/fields/Payment_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Total__c</fullName>
    <description>This field using for values to update in Invoice conga document.</description>
    <inlineHelpText>Payment Amount Total (= Payment Amount + Payment Sales Tax) that Customer has to Pay. Field Created for Conga Document Mapping.</inlineHelpText>
    <label>Payment Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>