force-app/main/default/objects/Invoice__c/fields/Payment_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Payment_Sales_Tax__c</fullName>
    <description>This field using for values to update in Invoice conga document.</description>
    <inlineHelpText>Payment Sales Tax Amount that Customer has to Pay. Field Created for Conga Document Mapping.</inlineHelpText>
    <label>Payment Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>