force-app/main/default/objects/Invoice__c/fields/Sent_To_PNC__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_PNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To PNC?</label>
    <type>Checkbox</type>
</CustomField>