force-app/main/default/objects/Invoice__c/fields/Sent_To_PNC_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_PNC_Amount__c</fullName>
    <label>Sent To PNC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>