force-app/main/default/objects/Invoice__c/fields/Sent_To_PNC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_PNC_Date_Time__c</fullName>
    <label>Sent To PNC Date/Time</label>
    <type>DateTime</type>
</CustomField>