force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>LS_Contract__c</columns>
    <columns>Billed_Amount__c</columns>
    <columns>Payment_Sales_Tax__c</columns>
    <columns>Charged_Amount__c</columns>
    <columns>Number_of_Charges__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>