force-app/main/default/objects/Invoice__c/listViews/Invoice_by_Lease.listView-meta.xml
<ListView>
    <fullName>Invoice_by_Lease</fullName>
    <columns>NAME</columns>
    <columns>LS_Contract__c</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>Paid_Invoice_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LS_Contract__c</field>
        <operation>equals</operation>
        <value>LES-0000000449</value>
    </filters>
    <label>Invoice by Lease</label>
    <language>en_US</language>
</ListView>